--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <body> 
     <h1>Welcome</h1>
     <p>This is my profile, enjoy!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa aperiam tempora ratione eligendi quidem maiores optio voluptates quod natus, neque, expedita, accusamus omnis ab laudantium sapiente id nobis officia harum?</p>
     </body>
     
     </html> 
