--- a/profile.html
+++ b/profile.html
@@ -1,11 +1,27 @@
 <DOCTYPE profile>
     <html>
-    <head> 
-    <title>Welcome to my website</title>
+
+    <head>
+        <title>PHP-Project profile</title>
+        <link href="style.css" rel="stylesheet" type="text/css">
     </head>
-    <body> 
-    <h1>Welcome</h1>
-    <p>This is my profile, enjoy!</p>
+
+    <body>
+        <h1>Welcome to my profile!</h1>
+        <h3>This is my profile. Enjoy scrolling through!</h3>
+        <p1> Hi, I am Irem and I am currently a student on HZ Zeeland on the location: Middelburg.<br>
+            I am 21 years old, born in the year 2002. Still young, right?
+        </p1><br>
+        <p2>Below this text you may see the links. Feel free to roam around</p2><br>
+        <a href="profile.html">Go to my Profile</a><br>
+        <a href="dashboard.html">Go to my dashboard</a><br>
+        <a href="blog.html">Go to my blog</a><br>
+        <a href="faq.html">Go to my FAQ</a><br>
+        <div class="box">
+            <br>
+        <br>
+            <a class="menuPost" href="post.html">click here for a post</a>
+        </div>
     </body>
-    
-    </html> 
+
+    </html>
