--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
     <html>
 
     <head>
-        <title>PHP-Project profile</title>
+        <title>PHP-Project index profile</title>
         <link href="style.css" rel="stylesheet" type="text/css">
     </head>
 
     <body>
-        <h1>Welcome to my profile!</h1>
-        <h3>This is my profile. Enjoy scrolling through!</h3>
+        <h1>Welcome to my index profile!</h1>
+        <h3>This is my index profile. Enjoy scrolling through!</h3>
         <p1> Hi, I am Irem and I am currently a student on HZ Zeeland on the location: Middelburg.<br>
             I am 21 years old, born in the year 2002. Still young, right?
         </p1><br>
